--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,14 @@
     "name": "mms80/todo-api",
     "description": "todo api",
     "license": "MIT",
+    "type": "library",
     "authors": [{
         "name": "Mahdi Sedighian",
         "email": "m.mahdi.sedighian@gmail.com"
     }],
     "require-dev": {
-        "orchestra/testbench": "^6.24"
+        "orchestra/testbench": "^5.8",
+        "laravel/legacy-factories": "^1.0.4"
     },
     "autoload": {
         "psr-4": {
@@ -16,7 +18,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "mms80\\TodoApi\\Tests": "tests/",
+            "mms80\\TodoApi\\Tests\\": "tests/",
             "mms80\\TodoApi\\Database\\Factories\\": "database/factories/"
         }
     },
@@ -26,5 +28,11 @@
                 "mms80\\TodoApi\\TodoApiServiceProvider"
             ]
         }
+    },
+    "require": {
+        "doctrine/dbal": "^2.0"
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit"
     }
 }
